--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Publish Docker image and Deploy to Minikube
 
 on:
   push:
@@ -31,3 +31,42 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  deploy_to_minikube:
+    name: Deploy to Minikube
+    runs-on: ubuntu-latest
+    needs: push_to_registry
+    steps:
+      - name: Set up Minikube
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl wget apt-transport-https
+          curl -Lo minikube https://storage.googleapis.com/minikube/releases/v1.30.0/minikube-linux-amd64
+          sudo chmod +x minikube
+          sudo mv minikube /usr/local/bin/
+      
+      - name: Start Minikube
+        run: |
+          minikube start --driver=docker
+          minikube status
+
+      - name: Set up kubectl for Minikube
+        run: |
+          alias kubectl='minikube kubectl --'
+          kubectl version --client
+
+      - name: Log in to Docker Hub (for Minikube)
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Pull Docker image to Minikube
+        run: |
+          kubectl create deployment ss_pro1 --image=shantanu99/ss_pro1:${{ steps.meta.outputs.tags }}
+          kubectl expose deployment ss_pro1 --type=LoadBalancer --port=8080
+          kubectl rollout status deployment/ss_pro1
+
+      - name: Test the deployment
+        run: |
+          minikube service ss_pro1 --url
